@@ -71,8 +71,35 @@ public class DefaultTokenHandler implements TokenHandler
 			addToken(token,context);
 	} //}}}
 
+	//{{{ getLineContext() method
+	/**
+	 * The token handler can compare this object with the object
+	 * previously given for this line to see if the token type at the end
+	 * of the line has changed (meaning subsequent lines might need to be
+	 * retokenized).
+	 * @since jEdit 4.2pre6
+	 */
+	public TokenMarker.LineContext getLineContext()
+	{
+		return lineContext;
+	} //}}}
+
+	//{{{ setLineContext() method
+	/**
+	 * The token handler can compare this object with the object
+	 * previously given for this line to see if the token type at the end
+	 * of the line has changed (meaning subsequent lines might need to be
+	 * retokenized).
+	 * @since jEdit 4.2pre6
+	 */
+	public void setLineContext(TokenMarker.LineContext lineContext)
+	{
+		this.lineContext = lineContext;
+	} //}}}
+
 	//{{{ Protected members
 	protected Token firstToken, lastToken;
+	protected TokenMarker.LineContext lineContext;
 
 	//{{{ getParserRuleSet() method
 	protected ParserRuleSet getParserRuleSet(TokenMarker.LineContext context)
